fixed #12. Area of Service Modal's close button has been increased via increasing of its padding space in order to improve UX on mobile devices

--- a/public/css/less/custom-styles.less
+++ b/public/css/less/custom-styles.less
@@ -558,7 +558,7 @@ section.pre-footer {
 
         .close-modal {
             line-height: 1;
-            padding: 0;
+            padding: 5px 10px 10px 10px;
             float: right;
             background-color: initial;
             border: none;
